--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
   <link href="./pages/index.css" rel="stylesheet">
 </head>
 <body class="root">
+  <header class="header">
+    <img class="header__logo" src="/Images/headerLogo.svg">
+  </header>
+  <main>
+    <div class="profile">
+      <div class="profile__avatar">
+        <img class="profile__avatarImage" src="/Images/profileAvatar.jpg">
+      </div>
+      <div class="profile__info">
+        <h2 class="profile__name">Жак-Ив Кусто</h2>
+        <h3 class="profile__activity">Исследователь океана</h3>
+        <div class="profile__editButton">
+          <img class="profile__editPan" src="/Images/editPen.png">
+        </div>
+      </div>
+    </div>
+    <div class="elements">
+
+    </div>
+  </main>
+  <footer class="footer">
+
+  </footer>
 </body>
 </html>
