feat: Первичная верстка (без псевдоклассов и адаптивности)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <main>
     <div class="profile">
       <div class="profile__avatar">
-        <img class="profile__avatarImage" src="/Images/profileAvatar.jpg">
       </div>
       <div class="profile__info">
         <h2 class="profile__name">Жак-Ив Кусто</h2>
@@ -22,13 +21,57 @@
           <img class="profile__editPan" src="/Images/editPen.png">
         </div>
       </div>
+      <div class="profile__addButton">
+        <img class="profile__plus" src="/Images/plus.svg">
+      </div>
     </div>
-    <div class="elements">
-
-    </div>
+    <contents class="elements">
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
+        <div class="element__plank">
+          <p class="element__name">Карачаевск</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
+        <div class="element__plank">
+          <p class="element__name">Гора Эльбрус</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
+        <div class="element__plank">
+          <p class="element__name">Домбай</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
+        <div class="element__plank">
+          <p class="element__name">Гора Эльбрус</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
+        <div class="element__plank">
+          <p class="element__name">Домбай</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
+        <div class="element__plank">
+          <p class="element__name">Карачаевск</p>
+          <img class="element__like" src="/Images/likeInactiv.svg">
+        </div>
+      </div>
+    </contents>
   </main>
   <footer class="footer">
-
+    <p class="footer__copyright">© 2022 Mesto Russia</p>
   </footer>
 </body>
 </html>
