feat:Законченная верстка основной страницы

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="profile__avatar">
       </div>
       <div class="profile__info">
-        <h2 class="profile__name">Жак-Ив Кусто</h2>
-        <h3 class="profile__activity">Исследователь океана</h3>
+        <h2 class="profile__name">Жак-Ив&nbsp;Кусто</h2>
+        <h3 class="profile__activity">Исследователь&nbsp;океана</h3>
         <div class="profile__editButton">
           <img class="profile__editPan" src="/Images/editPen.png">
         </div>
@@ -30,42 +30,42 @@
         <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
         <div class="element__plank">
           <p class="element__name">Карачаевск</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
         <div class="element__plank">
-          <p class="element__name">Карачаевск</p>
-          <img class="element__like" src="/Images/likeInactiv.svg">
+          <p class="element__name">Карачаево-Черкессия</p>
+          <button class="element__like" type="button"></button>
         </div>
       </div>
     </contents>
