feat: Законченная верстка страницы и pop-up'а

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 <body class="root">
   <header class="header">
-    <img class="header__logo" src="/Images/headerLogo.svg">
+    <img class="header__logo" src="./Images/headerLogo.svg">
   </header>
+  <div class="popup">
+    <form class="popup__container">
+      <h2 class="popup__heading">Редактировать профиль</h2>
+      <input type="text" class="popup__name popup__input" value="Жак-Ив Кусто">
+      <input type="text" class="popop__activity popup__input" value="Исследователь океана">
+      <button type="button" class="popup__saveButton">Сохранить</button>
+      <button type="button" class="popup__closeButton">
+        <img src="./Images/closeIcon.svg" class="popup__closeIcon">
+      </button>
+    </form>
+  </div>
   <main>
     <div class="profile">
       <div class="profile__avatar">
@@ -18,51 +29,51 @@
         <h2 class="profile__name">Жак-Ив&nbsp;Кусто</h2>
         <h3 class="profile__activity">Исследователь&nbsp;океана</h3>
         <div class="profile__editButton">
-          <img class="profile__editPan" src="/Images/editPen.png">
+          <img class="profile__editPan" src="./Images/editPen.png">
         </div>
       </div>
       <div class="profile__addButton">
-        <img class="profile__plus" src="/Images/plus.svg">
+        <img class="profile__plus" src="./Images/plus.svg">
       </div>
     </div>
     <contents class="elements">
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
+        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg">
         <div class="element__plank">
           <p class="element__name">Карачаевск</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
+        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
+        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/elbrus.jpg">
+        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/dombuy.jpg">
+        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="/Images/ElementsImages/karachaevsk.jpg">
+        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg">
         <div class="element__plank">
           <p class="element__name">Карачаево-Черкессия</p>
           <button class="element__like" type="button"></button>
