feature: Рабочий скрипт подключен к странице

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class="popup">
     <form class="popup__container">
       <h2 class="popup__heading">Редактировать профиль</h2>
-      <input type="text" class="popup__name popup__input" value="Жак-Ив Кусто">
-      <input type="text" class="popop__activity popup__input" value="Исследователь океана">
-      <button type="button" class="popup__saveButton">Сохранить</button>
+      <input type="text" class="popup__input popup__input_name" >
+      <input type="text" class="popup__input popup__input_activity" >
+      <button type="submit" class="popup__saveButton">Сохранить</button>
       <button type="button" class="popup__closeButton">
         <img src="./Images/closeIcon.svg" class="popup__closeIcon">
       </button>
@@ -26,8 +26,8 @@
       <div class="profile__avatar">
       </div>
       <div class="profile__info">
-        <h2 class="profile__name">Жак-Ив&nbsp;Кусто</h2>
-        <h3 class="profile__activity">Исследователь&nbsp;океана</h3>
+        <h2 class="profile__name">Жак-Ив Кусто</h2>
+        <h3 class="profile__activity">Исследователь океана</h3>
         <div class="profile__editButton">
           <img class="profile__editPan" src="./Images/editPen.png">
         </div>
@@ -84,5 +84,6 @@
   <footer class="footer">
     <p class="footer__copyright">© 2022 Mesto Russia</p>
   </footer>
+  <script src="./script.js"></script>
 </body>
 </html>
