fix: исправленны ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="root">
   <header class="header">
-    <img class="header__logo" src="./Images/headerLogo.svg">
+    <img class="header__logo" src="./Images/headerLogo.svg" alt="Логотип Mesto Russia">
   </header>
   <div class="popup">
     <form class="popup__container">
@@ -17,7 +17,6 @@
       <input type="text" class="popup__input popup__input_activity" >
       <button type="submit" class="popup__saveButton">Сохранить</button>
       <button type="button" class="popup__closeButton">
-        <img src="./Images/closeIcon.svg" class="popup__closeIcon">
       </button>
     </form>
   </div>
@@ -29,57 +28,54 @@
         <h2 class="profile__name">Жак-Ив Кусто</h2>
         <h3 class="profile__activity">Исследователь океана</h3>
         <div class="profile__editButton">
-          <img class="profile__editPan" src="./Images/editPen.png">
         </div>
       </div>
-      <div class="profile__addButton">
-        <img class="profile__plus" src="./Images/plus.svg">
-      </div>
+      <div class="profile__addButton"></div>
     </div>
-    <contents class="elements">
+    <article class="elements">
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg">
+        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg" alt="Старое здание в горах">
         <div class="element__plank">
           <p class="element__name">Карачаевск</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg">
+        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg" alt="Поля на закате">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg">
+        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg" alt="Вид на горы">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg">
+        <img class="element__image" src="./Images/ElementsImages/elbrus.jpg" alt="Поля на закате">
         <div class="element__plank">
           <p class="element__name">Гора Эльбрус</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg">
+        <img class="element__image" src="./Images/ElementsImages/dombuy.jpg" alt="Вид на горы">
         <div class="element__plank">
           <p class="element__name">Домбай</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg">
+        <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg" alt="Старое здание в горах">
         <div class="element__plank">
           <p class="element__name">Карачаево-Черкессия</p>
           <button class="element__like" type="button"></button>
         </div>
       </div>
-    </contents>
+    </article>
   </main>
   <footer class="footer">
     <p class="footer__copyright">© 2022 Mesto Russia</p>
