--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <img class="header__logo" src="./Images/headerLogo.svg" alt="Логотип Mesto Russia">
   </header>
   <div class="popup">
-    <form class="popup__container">
-      <h2 class="popup__heading">Редактировать профиль</h2>
-      <input type="text" class="popup__input popup__input_name" >
-      <input type="text" class="popup__input popup__input_activity" >
-      <button type="submit" class="popup__saveButton">Сохранить</button>
-      <button type="button" class="popup__closeButton">
-      </button>
-    </form>
+    <div class="popup__container">
+      <button type="button" class="popup__close-button"></button>
+      <form class="popup__form">
+        <h2 class="popup__heading">Редактировать профиль</h2>
+        <input type="text" class="popup__input popup__input_name" >
+        <input type="text" class="popup__input popup__input_activity" >
+        <button type="submit" class="popup__save-button">Сохранить</button>
+      </form>
+    </div>
   </div>
   <main>
     <div class="profile">
@@ -27,10 +28,10 @@
       <div class="profile__info">
         <h2 class="profile__name">Жак-Ив Кусто</h2>
         <h3 class="profile__activity">Исследователь океана</h3>
-        <div class="profile__editButton">
-        </div>
+        <button class="profile__edit-button" type="button">
+        </button>
       </div>
-      <div class="profile__addButton"></div>
+      <button class="profile__add-button" type="button"></button>
     </div>
     <article class="elements">
       <div class="element">
