--- a/index.html
+++ b/index.html
@@ -10,77 +10,78 @@
   <header class="header">
     <img class="header__logo" src="./Images/headerLogo.svg" alt="Логотип Mesto Russia">
   </header>
-  <div class="popup">
-    <div class="popup__container">
-      <button type="button" class="popup__close-button"></button>
-      <form class="popup__form">
-        <h2 class="popup__heading">Редактировать профиль</h2>
-        <input type="text" class="popup__input popup__input_name" >
-        <input type="text" class="popup__input popup__input_activity" >
-        <button type="submit" class="popup__save-button">Сохранить</button>
-      </form>
-    </div>
-  </div>
+
   <main>
-    <div class="profile">
+    <section class="profile">
       <div class="profile__avatar">
       </div>
       <div class="profile__info">
-        <h2 class="profile__name">Жак-Ив Кусто</h2>
-        <h3 class="profile__activity">Исследователь океана</h3>
-        <button class="profile__edit-button" type="button">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <p class="profile__activity">Исследователь океана</p>
+        <button class="profile__edit-button" type="button" aria-label="редактирование профиля">
         </button>
       </div>
-      <button class="profile__add-button" type="button"></button>
-    </div>
-    <article class="elements">
-      <div class="element">
+      <button class="profile__add-button" type="button" aria-label="добавить картинку"></button>
+    </section>
+    <section class="elements">
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg" alt="Старое здание в горах">
         <div class="element__plank">
-          <p class="element__name">Карачаевск</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Карачаевск</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/elbrus.jpg" alt="Поля на закате">
         <div class="element__plank">
-          <p class="element__name">Гора Эльбрус</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/dombuy.jpg" alt="Вид на горы">
         <div class="element__plank">
-          <p class="element__name">Домбай</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Домбай</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/elbrus.jpg" alt="Поля на закате">
         <div class="element__plank">
-          <p class="element__name">Гора Эльбрус</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/dombuy.jpg" alt="Вид на горы">
         <div class="element__plank">
-          <p class="element__name">Домбай</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Домбай</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg" alt="Старое здание в горах">
         <div class="element__plank">
-          <p class="element__name">Карачаево-Черкессия</p>
-          <button class="element__like" type="button"></button>
+          <h2 class="element__name">Карачаево-Черкессия</h2>
+          <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
-      </div>
-    </article>
+      </article>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">© 2022 Mesto Russia</p>
   </footer>
-  <script src="./script.js"></script>
+  <div class="popup">
+    <div class="popup__container">
+      <button type="button" class="popup__close-button" aria-label="закрыть редактирование профиля"></button>
+      <form class="popup__form" name="profileForm" method="post">
+        <h2 class="popup__heading">Редактировать профиль</h2>
+        <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="profileNameForm">
+        <input type="text" class="popup__input popup__input_type_activity" placeholder="О себе" name="profileActivityForm">
+        <button type="submit" class="popup__save-button" aria-label="сохранить редактирование профиля">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
