fix: Подправлен JS и слипание имени картинки

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <article class="element">
         <img class="element__image" src="./Images/ElementsImages/karachaevsk.jpg" alt="Старое здание в горах">
         <div class="element__plank">
-          <h2 class="element__name">Карачаевск</h2>
+          <h2 class="element__name">Карачаевск 11111111111111111111111111111111</h2>
           <button class="element__like" type="button" aria-label="лайк"></button>
         </div>
       </article>
