develop: JS likes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <section class="elements">
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
@@ -34,7 +34,7 @@
         </div>
       </article>
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
@@ -43,7 +43,7 @@
         </div>
       </article>
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
@@ -52,7 +52,7 @@
         </div>
       </article>
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
@@ -61,7 +61,7 @@
         </div>
       </article>
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
@@ -70,7 +70,7 @@
         </div>
       </article>
       <article class="element">
-        <div class="element__image">
+        <div class="element__image-container">
           <div class="element__trash"></div>
         </div>
         <div class="element__plank">
