--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_image">
+    <div class="image-popup">
+      <button type="button" class="popup__close-button popup__close-button_area_image" aria-label="закрыть просмотр карточки"></button>
+      <img class="image-popup__image" src="./Images/ElementsImages/karachaevsk.jpg">
+      <h2 class="image-popup__name">Карачаево-Черкессия</h2>
+    </div>
+  </div>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
