исправленна ошибка с лишним классом у кнопок

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <input type="text" class="popup__input popup__input_type_activity" id="activity-input" placeholder="О себе" name="profileActivityForm" minlength="2" maxlength="200" required>
           <span class="popup__error activity-input-error"> </span>
         </label>
-        <button type="submit" class="popup__save-button popup__save-button_area_profile form__submit" aria-label="сохранить редактирование профиля">Сохранить</button>
+        <button type="submit" class="popup__save-button popup__save-button_area_profile" aria-label="сохранить редактирование профиля">Сохранить</button>
       </form>
     </div>
   </div>
@@ -58,7 +58,7 @@
           <input type="url" class="popup__input popup__input_type_card-Src" id="cardSource-input" placeholder="Ссылка на картинку" name="cardSrcForm" required>
           <span class="popup__error cardSource-input-error"></span>
         </label>
-        <button type="submit" class="popup__save-button popup__save-button_area_card form__submit" aria-label="добавить новую карточку">Создать</button>
+        <button type="submit" class="popup__save-button popup__save-button_area_card" aria-label="добавить новую карточку">Создать</button>
       </form>
     </div>
   </div>
