--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </div>
     </article>
   </template>
-  <script type="module" src="./scripts/constants.js"></script>
+  <script type="module" src="./utils/constants.js"></script>
   <script type="module" src="./scripts/script.js"></script>
-  <script type="module" src="./scripts/card.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 </html>
