--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link href="./pages/index.css" rel="stylesheet">
 </head>
 <body class="root">
   <header class="header">
-    <img class="header__logo" src="./Images/headerLogo.svg" alt="Логотип Mesto Russia">
+    <img class="header__logo" src="<%=require('./Images/headerLogo.svg')%>" alt="Логотип Mesto Russia">
   </header>
   <main>
     <section class="profile">
@@ -81,13 +80,5 @@
     </div>
     </article>
   </template>
-  <script type="module" src="./utils/constants.js"></script>
-  <script type="module" src="./scripts/script.js"></script>
-  <script type="module" src="./scripts/Card.js"></script>
-  <script type="module" src="./scripts/FormValidator.js"></script>
-  <script type="module" src="./scripts/PopupWithForm.js"></script>
-  <script type="module" src="./scripts/PopupWithImage.js"></script>
-  <script type="module" src="./scripts/UserInfo.js"></script>
-  <script type="module" src="./scripts/Section.js"></script>
 </body>
 </html>
